--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prreviewbot",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "pr-review-bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
