--- a/.github/workflows/pr-review-bot.yml
+++ b/.github/workflows/pr-review-bot.yml
@@ -24,3 +24,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       run: node pr-review-bot.js
+    - name: Debug Token
+      run: "echo 'Token: GH_TOKEN ${{ secrets.GH_TOKEN }} GITHUB_TOKEN ${{ secrets.GITHUB_TOKEN }}'"
