--- a/.github/workflows/pr-review-bot.yml
+++ b/.github/workflows/pr-review-bot.yml
@@ -19,8 +19,12 @@ jobs:
 
     - name: Install Dependencies
       run: npm install
+    - name: Verify Token
+      run: "echo 'GH_TOKEN starts with: ${{ secrets.GH_TOKEN:0:4 }}****'"
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
     - name: Run PR Review Bot
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: node pr-review-bot.js
